samples/_failures_safe/1761431210_495a37_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9e8cc953.c:189:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  189 | void freeGraph
      | ^~~~
